# maketa

./: .tool-versions  README.md  design.md  docker-compose.yml  package-lock.json  package.json  requirements.txt
.github/workflows/: ci.yml  deploy-release.yml  main_maketa-backend.yml  pr-agent.yml  release_maketa-backend.yml  try-azure-deploy_maketa-backend.yml  try-azure-deploy_maketa-frontend.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  server.py  test_belief_explanation.py
backend/app/: chain.py  controller.py  database.py  model.py  schema.py  template.py  vectordb.py
backend/data/: output.csv
backend/migrations/: env.py
backend/migrations/versions/: 26468e89757c_model.py  2a4c9720da7e_initial_migration.py  2f523f04e89b_remove_consequence_and_effect_from_.py  7ec9a1730f87_model.py  8c90e07752a6_init.py  94ceb1d778a0_init.py  98f6f13845fb_update_element_type.py  b1d5fcb6eada_url.py  b531f4d471dc_fix_failure.py  f64a54526f2e_add_models.py  remove_self_score.py
backend/scripts/: list_hero_failures.py
backend/tests/: test_adversity_chain.py  test_belief_chain.py  test_chain_manager.py  test_consequence_chain.py  test_dispute_chain.py  test_energy_chain.py
frontend/: .biome.json  .env.production  .gitignore  Dockerfile  Dockerfile.dev  next.config.js  next.config.ts  orval.config.ts  package-lock.json  package.json
frontend/src/api/: generated.ts  mutator.ts
frontend/src/api/model/: analyzeFailureFailuresFailureIdAnalyzePost200.ts  beliefAnalysisResponse.ts  beliefLabel.ts  beliefLabelDisputation.ts  beliefLabelEvidence.ts  beliefLabelExplanation.ts  beliefLabelNewPerspective.ts  concludeFailureInput.ts  createElementInput.ts  createFailureInput.ts  createUserInput.ts  element.ts  elementType.ts  failure.ts  failureConclusion.ts  failureDetail.ts  failureExplainCertainty.ts  failureHeroDescription.ts  failureHeroEnergy.ts  failureHeroFailure.ts  failureHeroFailureCertainty.ts  failureHeroFailureReason.ts  failureHeroFailureSource.ts  (+31 more)
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: HypnoticLoader.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: firebase.ts
frontend/transformers/: addBasePath.ts
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+22 files in other folders)
