[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kimoto-Norihiro",email = "n000r111code@gmail.com"}
]
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain-core (>=0.3.37,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "langserve (>=0.3.1,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sse-starlette (>=1.8.2,<2.0.0)",
    "sqlalchemy (>=2.0.0)",
    "pymysql (>=1.1.0,<2.0.0)",
    "cryptography (>=41.0.0,<42.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "tavily-python (>=0.5.1,<0.6.0)",
    "weaviate-client (>=4.11.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = ["migrations/"]

[tool.mypy.plugins]
sqlalchemy.mypy = true

[tool.poetry]
name = "backend"
version = "0.1.0"
packages = [
    { include = "app" }
]

[tool.poetry.group.dev.dependencies]
types-pymysql = "^1.1.0.20241103"
pandas-stubs = "^2.2.0.240218"
types-tqdm = "^4.66.0.20240106"

